--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -222,21 +222,52 @@ pay-to-script-hash (P2SH) with MERKLE-BRANCH-VERIFY, and "Tail Call Execution Se
 
 
 \section{TOR - the onion routing}
-Tor is free software for enabling anonymous communication. The name is derived from an acronym for the original software project name "The Onion Router". 
-Tor directs Internet traffic through a free, worldwide, volunteer overlay network consisting of more than seven thousand relays to conceal a user's location
-and usage from anyone conducting network surveillance or traffic analysis. Using Tor makes it more difficult to trace Internet activity to the user: this includes 
-"visits to Web sites, online posts, instant messages, and other communication forms". The intent for Tor's use is to protect the personal privacy of its users,
-as well as their freedom and ability to conduct confidential communication by keeping their Internet activities from being monitored.
 
-Tor does not prevent an online service from determining when it is being accessed through Tor. Tor protects a user's privacy,
-but does not hide the fact that someone is using Tor. Some websites restrict allowances through Tor. For example, the MediaWiki TorBlock extension automatically restricts edits made through Tor,
-although Wikipedia allows some limited editing in exceptional circumstances.
+Tor is an free open source software, that provides access to tor network. Tor network is a network of TOR nodes.
+The goal of TOR project is to provide it's users encrypted access to internet in order to to prevent third parties
+from evesdropping and analysis of the transmitted data.
+The communication of the user's computer with network is encrypted and rerouted through multiple TOR nodes using onion routing technology.
+The usage of TOR can be detected by third party, but the third party can not decryptsa user's data, that are transmitted via tor.
+Some websites restrict access from TOR, due to many risks involved.
 
-Onion routing is implemented by encryption in the application layer of a communication protocol stack, nested like the layers of an onion. 
-Tor encrypts the data, including the next node destination IP address, multiple times and sends it through a virtual circuit comprising successive, random-selection Tor relays.
-Each relay decrypts a layer of encryption to reveal the next relay in the circuit to pass the remaining encrypted data on to it. The final relay decrypts the innermost layer of encryption and sends
-the original data to its destination without revealing or knowing the source IP address. Because the routing of the communication is partly concealed at every hop in the Tor circuit,
-this method eliminates any single point at which the communicating peers can be determined through network surveillance that relies upon knowing its source and destination.
+Communication between browser and webserver is usually done via encrypted HTTPS protocol.
+This protocol use assymetric cryptography. The webserver and browser exchange their public keys at start of communication
+and encrypt the data using these keys. Decrypting the data is possible only by corresponding private keys,
+which the browser and webserver keep locally. This protocol is suspectible to man in the middle attacks.
+If the attacker has control over the transmission from the start of communication, he can place himself in the middle
+ of communication and act as webserver for user and as a user for webserver. To prevent these types of attact
+ a certification authority is needed, which is a institution, that sign public keys, belonging to webserver.
+ When browser recieves the public key, it automatically checks, if it is signed by any authority from it's list of authorities
+ and if not, it displays warning or error message.
+ 
+The HTTPS protocol encrypts data, but doesn't hide the identity of the user from webserver,
+ and also the internet provider can see, where is the user connecting to.
+ In TOR, the user's identity is hidden from webserver, and internet provider can only see, that user is connecting to TOR,
+ but can not see where is the destination of the data that are transmitted via TOR.
+ Tor uses Onion routing technology. When user visits website, there TOR software picks randomly few TOR nodes from the network
+ and estabilish a circuit, as we can see on \ref{TOR routing schema}. 
+ The packet of data is encrypted with the each public key of the node in circuit, starting from last node as on \ref{TOR packed encryption schema}.
+ Each node of the network only knows the previous node he recieved the data from and it gets the address 
+ of next node by decrypting the packet and reading the added metadata.
+ 
+ \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=1\textwidth]{tor-prejate}
+    \caption{TOR routing schema}
+    \label{TOR routing schema}
+\end{figure}
+ 
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=1\textwidth]{tor-packet-prejate}
+    \caption{TOR packed encryption schem}
+    \label{TOR packed encryption schema}
+\end{figure}
+ 
+ 
+ 
+ 
+ 
 
 \section{Online drug marketplaces}
 A darknet market or cryptomarket is a commercial website on the web that operates via darknets such as Tor or I2P
