zdroje btc ve frontendu

--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -181,7 +181,7 @@ There are only few articles focusing on describing the economy of fully operatin
 In this work, we bring analysis of the micro-economy of two fully operating drug markets and present interesting statistics about vendors,
 size and frequency of the deals and their sortiment and availability.
 
-\chapter{Technology and terms}
+\chapter{Darknet market's economy and technology }
 
 In this chapter, I explain the terms, tools and related technology used for achieving the goal of this thesis.
 
@@ -264,28 +264,11 @@ The HTTPS protocol encrypts data, but doesn't hide the identity of the user from
     \label{TOR packed encryption schema}
 \end{figure}
  
- 
- 
- 
- 
+\section{PGP}
+\section{Online dark markets}
 
-\section{Online drug marketplaces}
-A darknet market or cryptomarket is a commercial website on the web that operates via darknets such as Tor or I2P
-They function primarily as black markets, selling or brokering transactions involving drugs, cyber-arms, weapons,
-counterfeit currency, stolen credit card details, forged documents, unlicensed pharmaceuticals, steroids and
-other illicit goods as well as the sale of legal products. In December 2014, a study by Gareth Owen from the University
-of Portsmouth suggested the second most popular sites on Tor were darknet markets.
+A dark market is  
 
-Transactions typically use Bitcoin for payment, sometimes combined with tumblers for added anonymity and PGP to secure communications
-between buyers and vendors from being stored on the site itself. Many sites use Bitcoin multisig transactions 
-to improve security and reduce dependency on the site's escrow. The Helix Bitcoin tumbler offers direct anonymized marketplace payment integrations.
-
-On making a purchase, the buyer must transfer cryptocurrency into the site's escrow, after which a vendor dispatches their goods then claims the
-payment from the site. On receipt or non-receipt of the item users may leave feedback against the vendor's account. Buyers may "finalize early"
-(FE), releasing funds from escrow to the vendor prior to receiving their goods in order to expedite a transaction, but leave themselves vulnerable to fraud if they choose to do so.
-
-Following Operation Onymous, there was a substantial increase in PGP support from vendors, with PGP use on two marketplaces near 90\%.
-This suggests that law enforcement responses to cryptomarkets result in continued security innovations, thereby making markets more resilient to undercover law enforcement efforts.
 
 \chapter{Methods and tools to get and analyze data}
 \section{Obtaining,storing and analyzing blockchain data}
